final CSS changes for codebase doc

--- a/site/_includes/codebase.html
+++ b/site/_includes/codebase.html
@@ -20,15 +20,13 @@
 -->
 
 <section class="codebase">
-  <ul class="list-group">
-    {% for dir in site.data.codebase.directories %}
-    <li class="list-group-item">
-      <span class="list-group-item-title">
-        {{ dir.name }}
-        <a href="{{ site.pulsar_repo }}/{{ dir.name }}"><i class="fa fa-github"></i></a>
-        <p class="list-group-item-text">{{ dir.description | markdownify }}</p>
-      </span>
-    </li>
-    {% endfor %}
-  </ul>
+  {% for dir in site.data.codebase.directories %}
+  <div class="card">
+  <div class="card-block">
+    <h2 class="card-title">{{ dir.name }} <a href="{{ site.pulsar_repo }}/{{ dir.name }}"><i class="fa fa-github"></i></a></h2>
+    <p class="card-text">{{ dir.description | markdownify }}</p>
+    {% if dir.language %}<p>Languages: {{ dir.language }}</p>{% endif %}
+  </div>
+</div>
+  {% endfor %}
 </section>
