--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -74,13 +74,22 @@
           Community
         </a>
         <div class="dropdown-menu" aria-labelledby="versionsDropdown">
+          <h3 class="dropdown-header">Get in touch</h3>
           <a class="dropdown-item" href="{{ site.baseurl }}mailing-lists">Mailing Lists</a>
           <a class="dropdown-item" href="https://twitter.com/Apache_Pulsar">Twitter</a>
           <a class="dropdown-item" href="https://github.com/apache/incubator-pulsar/wiki">Wiki</a>
           <a class="dropdown-item" href="https://github.com/apache/incubator-pulsar/issues">Issue tracking</a>
           <div class="dropdown-divider"></div>
+          <h3 class="dropdown-header">Resources</h3>
           <a class="dropdown-item" href="{{ site.baseurl }}presentations">Presentations</a>
           <a class="dropdown-item" href="{{ site.baseurl }}team">Team</a>
+          <div class="dropdown-divider"></div>
+          <h3 class="dropdown-header">Apache</h3>
+          <a class="dropdown-item" href="http://www.apache.org/">The Apache Software Foundation</a>
+          <a class="dropdown-item" href="http://www.apache.org/licenses/">License</a>
+          <a class="dropdown-item" href="http://www.apache.org/foundation/sponsorship.html">Sponsorship</a>
+          <a class="dropdown-item" href="http://www.apache.org/foundation/thanks.html">Thanks</a>
+          <a class="dropdown-item" href="http://www.apache.org/security">Security</a>
         </div>
       </li>
     </ul>
