begin reworking TTL doc

--- a/site/_includes/head.html
+++ b/site/_includes/head.html
@@ -27,6 +27,8 @@
 
 <title>{{ page.title }}</title>
 
+<meta charset="utf-8">
+
 <link rel="stylesheet" href="{{ site.baseurl }}css/style.css">
 <link rel="shortcut icon" href="{{ site.baseurl }}img/favicon.ico">
 
