--- a/site/css/style.scss
+++ b/site/css/style.scss
@@ -245,7 +245,7 @@ article.content {
 @import "popover";
 @import "protobuf";
 @import "docs";
-@import "tocify";
+@import "toc";
 @import "syntax";
 @import "sidebar";
 @import "cli";
