--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -92,7 +92,7 @@
           <a class="dropdown-item" href="http://www.apache.org/foundation/sponsorship.html">Sponsorship</a>
           <a class="dropdown-item" href="http://www.apache.org/foundation/thanks.html">Thanks</a>
           <a class="dropdown-item" href="http://www.apache.org/security">Security</a>
-        t</div>
+        </div>
       </li>
     </ul>
   </div>
