Translated docs into Japanese

--- a/site/_includes/codebase-ja.html
+++ b/site/_includes/codebase-ja.html
@@ -1,7 +1,3 @@
----
-layout: default
----
-
 <!--
 
     Licensed to the Apache Software Foundation (ASF) under one
@@ -23,22 +19,16 @@ layout: default
 
 -->
 
-<div class="rest-api-container container-fluid">
-  <div class="row">
-      <nav class="sidebar-nav hidden-sm-down col-md-2 col-lg-3">
-        {% include sidebar.html %}
-      </nav>
-
-    <article class="col-xs-12 col-sm-12 col-md-10 col-lg-9">
-      <section class="docs-header">
-        <h1 class="docs-title">{{ page.title }}</h1>
-        {% if page.lead %}<span class="docs-lead">{{ page.lead }}</span>{% endif %}
-        <hr />
+<section class="codebase">
+  {% for dir in site.data.codebase-ja.directories %}
+  <div class="card">
+    <div class="card-block">
+      <h2 class="card-title">{{ dir.name }} <a href="{{ site.pulsar_repo }}/{{ dir.name }}"><i class="fa fa-github"></i></a></h2>
+      <section class="card-text">
+      {{ dir.description | markdownify }}
+      {% if dir.language %}<span>言語: {{ dir.language }}</span>{% endif %}
       </section>
-
-      <section class="content">
-        {{ content }}
-      </section>
-    </article>
+    </div>
   </div>
-</div>
+  {% endfor %}
+</section>
