--- a/site/_includes/message-ja.html
+++ b/site/_includes/message-ja.html
@@ -1,7 +1,3 @@
----
-layout: default
----
-
 <!--
 
     Licensed to the Apache Software Foundation (ASF) under one
@@ -22,23 +18,10 @@ layout: default
     under the License.
 
 -->
-
-<div class="rest-api-container container-fluid">
-  <div class="row">
-      <nav class="sidebar-nav hidden-sm-down col-md-2 col-lg-3">
-        {% include sidebar.html %}
-      </nav>
-
-    <article class="col-xs-12 col-sm-12 col-md-10 col-lg-9">
-      <section class="docs-header">
-        <h1 class="docs-title">{{ page.title }}</h1>
-        {% if page.lead %}<span class="docs-lead">{{ page.lead }}</span>{% endif %}
-        <hr />
-      </section>
-
-      <section class="content">
-        {{ content }}
-      </section>
-    </article>
+{% assign message = site.data.messages-ja[include.id] %}
+<div class="admonition">
+  <div class="{{ message.type }}">
+    {% if message.title %}<span class="admonition-title">{{ message.title | markdownify }}</span>{% endif %}
+    {% if message.content %}{{ message.content | markdownify }}{% endif %}
   </div>
 </div>
