--- a/site/_includes/sidebar-ja.html
+++ b/site/_includes/sidebar-ja.html
@@ -18,21 +18,35 @@
     under the License.
 
 -->
-<ul class="sidebar">
-  {% for group in site.data.sidebar-ja.groups %}
-  <section class="sidebar-group">
-    <h4>{{ group.title }}</h4>
-    <ul>
-      {% for doc in group.docs %}
-      {% capture doc_url %}/ja/{{ doc.endpoint }}/{% endcapture %}
-      {% capture page_url %}/{{ page.url | remove_first: "/" }}{% endcapture %}
-      {% if page_url == doc_url %}
-      <li><a class="active" href="{{ doc_url }}"><i class="fa fa-file-text-o"></i>{{ doc.title }}</a></li>
-      {% else %}
-      <li><a href="{{ doc_url }}"><i class="fa fa-file-text-o"></i>{{ doc.title }}</a></li>
-      {% endif %}
-      {% endfor %}
-    </ul>
-  </section>
-  {% endfor %}
-</ul>
+{% unless page.sidebar_disable == true %}
+{% capture page_url %}/{{ page.url | remove_first: "/" }}{% endcapture %}
+<aside class="sidebar-nav">
+  <div id="sidebar-accordion" role="tablist" aria-multiselectable="true">
+    {% for group in site.data.sidebar-ja.groups %}
+    {% assign slug = group.title | slugify %}
+    <div class="card">
+      <div class="card-header" role="tab" id="heading-{{ slug }}">
+        <h5>
+          <a data-toggle="collapse" data-parent="#sidebar-accordion" href="#collapse-{{ slug }}"{% if false %} aria-exanded="true"{% endif %} aria-controls="collapse-{{ slug }}">
+            {{ group.title }}
+          </a>
+        </h5>
+      </div>
+
+      <div class="sidebar-group collapse" id="collapse-{{ slug }}" role="tabpanel" aria-labelledby="heading-{{ slug }}">
+        <ul>
+          {% for doc in group.docs %}
+          {% capture doc_url %}/ja/{{ doc.endpoint }}/{% endcapture %}
+          <li{% if page_url == doc_url %} class="active"{% endif %}>
+            <a href="/ja/{{ group.dir }}/{{ doc.endpoint }}">
+              {{ doc.title }}
+            </a>
+          </li>
+          {% endfor %}
+        </ul>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+</aside>
+{% endunless %}
