--- a/site/_includes/stats-ja.html
+++ b/site/_includes/stats-ja.html
@@ -1,7 +1,3 @@
----
-layout: default
----
-
 <!--
 
     Licensed to the Apache Software Foundation (ASF) under one
@@ -22,23 +18,20 @@ layout: default
     under the License.
 
 -->
-
-<div class="rest-api-container container-fluid">
-  <div class="row">
-      <nav class="sidebar-nav hidden-sm-down col-md-2 col-lg-3">
-        {% include sidebar.html %}
-      </nav>
-
-    <article class="col-xs-12 col-sm-12 col-md-10 col-lg-9">
-      <section class="docs-header">
-        <h1 class="docs-title">{{ page.title }}</h1>
-        {% if page.lead %}<span class="docs-lead">{{ page.lead }}</span>{% endif %}
-        <hr />
-      </section>
-
-      <section class="content">
-        {{ content }}
-      </section>
-    </article>
-  </div>
-</div>
+{% assign stats = site.data.stats-ja[include.id] %}
+<table class="stats">
+  <thead>
+    <tr>
+      <th>統計情報の項目</th>
+      <th>説明</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for stat in stats %}
+    <tr>
+      <td>{{ stat[0] }}</td>
+      <td>{{ stat[1] | markdownify | remove: "<p>" | remove: "</p>" }}</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
