--- a/site/_includes/tags-modal-ja.html
+++ b/site/_includes/tags-modal-ja.html
@@ -1,7 +1,3 @@
----
-layout: default
----
-
 <!--
 
     Licensed to the Apache Software Foundation (ASF) under one
@@ -22,23 +18,21 @@ layout: default
     under the License.
 
 -->
-
-<div class="rest-api-container container-fluid">
-  <div class="row">
-      <nav class="sidebar-nav hidden-sm-down col-md-2 col-lg-3">
-        {% include sidebar.html %}
-      </nav>
-
-    <article class="col-xs-12 col-sm-12 col-md-10 col-lg-9">
-      <section class="docs-header">
-        <h1 class="docs-title">{{ page.title }}</h1>
-        {% if page.lead %}<span class="docs-lead">{{ page.lead }}</span>{% endif %}
-        <hr />
-      </section>
-
-      <section class="content">
-        {{ content }}
-      </section>
-    </article>
+<div class="modal fade" id="modal-{{ tag | replace: " ", "-" | downcase }}">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title"><strong>{{ tag }}</strong>タグのページ一覧</h5>
+      </div>
+      <div class="modal-body">
+        <ul>
+          {% for entry in site.pages %}
+          {% if entry.tags_ja contains tag %}
+          <li><a href="{{ entry.url }}">{{ entry.title }}</a></li>
+          {% endif %}
+          {% endfor %}
+        </ul>
+      </div>
+    </div>
   </div>
 </div>
