--- a/site/_layouts/rest-api-ja.html
+++ b/site/_layouts/rest-api-ja.html
@@ -23,39 +23,24 @@ layout: default
 
 -->
 
-
-<div class="docs-container container-fluid">
+<div class="rest-api-container container-fluid">
   <div class="row">
-    <nav class="sidebar-nav hidden-md-down col-lg-3">
-      {% include sidebar-ja.html %}
+    <nav class="sidebar-nav hidden-sm-down col-md-2 col-lg-3">
+        <nav class="sidebar-nav hidden-sm-down col-md-2 col-lg-3">
+          {% include sidebar-ja.html %}
+        </nav>
     </nav>
 
-    <article class="col-xs-12 col-sm-12 col-md-12 col-lg-7">
+    <article class="col-xs-12 col-sm-12 col-md-10 col-lg-9">
       <section class="docs-header">
         <h1 class="docs-title">{{ page.title }}</h1>
-        {% if page.lead %}<span class="docs-lead">{{ page.lead }}</span><br />{% endif %}
-        <section class="tags">
-          {% for tag in page.tags_ja %}
-          <!-- <span class="badge badge-pill badge-primary">{{ tag }}</span> -->
-          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal-{{ tag | replace: " ", "-" | downcase }}">{{ tag }}</button>
-          {% include tags-modal-ja.html %}
-          {% endfor %}
-        </section>
-
-        <hr class="hr">
+        {% if page.lead %}<span class="docs-lead">{{ page.lead }}</span>{% endif %}
+        <hr />
       </section>
 
       <section class="content">
         {{ content }}
       </section>
     </article>
-
-    <nav class="toc-bar hidden-md-down col-lg-2">
-      {% unless page.toc_disable %}
-      <div id="toc">
-        <h4>{{ page.title }}</h4>
-      </div>
-      {% endunless %}
-    </nav>
   </div>
 </div>
