hide apache feather on smaller screens

--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -113,6 +113,6 @@
     </ul>
   </div>
   <a href="http://www.apache.org/">
-    <img class="asf-logo" title="Apache Software Foundation" src="/img/feather.png" />
+    <img class="asf-logo hidden-md-down" title="Apache Software Foundation" src="/img/feather.png" />
   </a>
 </nav>
