--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -112,7 +112,7 @@
       </li>
     </ul>
   </div>
-  <a href="http://www.apache.org/">
-    <img class="asf-logo hidden-md-down" title="Apache Software Foundation" src="/img/feather.png" />
+  <a class="hidden-md-down" href="http://www.apache.org/">
+    <img class="asf-logo" title="Apache Software Foundation" src="/img/feather.png" />
   </a>
 </nav>
