fix navbar dropdown issues

--- a/site/_sass/_variables.scss
+++ b/site/_sass/_variables.scss
@@ -1,6 +1,6 @@
 // Dimensions
 $top-margin: 50px;
-$navbar-height: 77px;
+//$navbar-height: 77px;
 $toc-border-radius: 2px;
 $docs-font-size: 1rem;
 $table-right-padding: 1rem;
