remove mobile-unfriendly buttons

--- a/site/_sass/_docs.scss
+++ b/site/_sass/_docs.scss
@@ -1,6 +1,10 @@
 .rest-api-container, .docs-container {
   margin-top: $top-margin;
 
+  ul ul {
+    margin-bottom: 10px;
+  }
+
   nav.sidebar {
     display: inline;
     width: 100%;
