remove navbar logo on main page

--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -24,11 +24,13 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <!-- {% if page.url != "/" %} -->
+  {% if page.url != "/" %}
   <a class="navbar-brand" href="/">
     <img class="main-logo" src="/img/pulsar-logo.png" alt="Pulsar logo">
   </a>
-  <!-- {% endif %} -->
+  {% endif %}
+
+  <a class="navbar-nav"></a>
 
   <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
     <ul class="navbar-nav">
