fix image width issue

--- a/site/_sass/_docs.scss
+++ b/site/_sass/_docs.scss
@@ -145,6 +145,7 @@
       p img {
         display: block;
         margin: 20px auto;
+        max-width: 100%;
 
         &[alt="Maven Central"] {
           width: 20%;
