--- a/site/_sass/_docs.scss
+++ b/site/_sass/_docs.scss
@@ -30,6 +30,10 @@
 .rest-api-container, .docs-container {
   margin-top: $top-margin;
 
+  h4 + ul {
+    margin-top: 1rem;
+  }
+
   ul ul {
     margin: 8px 0;
   }
@@ -256,7 +260,7 @@
       }
 
       p + table, table + p, table + h4, h4 + .highlighter-rouge {
-        margin-top: 20px;
+        margin-top: 15px;
       }
 
       .highlighter-rouge + table, .highlighter-rouge + h4 {
